feat: implement database connection pool optimization with dynamic scaling
- Add SQLAlchemyConfig with adaptive pool sizing and monitoring
- Implement AsyncConnectionManager with dynamic pool optimization
- Add LoadMonitor for system resource tracking
- Add QueryMonitor for performance analysis and slow query detection
- Integrate circuit breaker pattern for fault tolerance
- Add comprehensive unit and integration tests with benchmarks
- Update ClientManager to support database connection management
- All tests passing (127/128 tests successful, 1 skipped)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -191,6 +191,7 @@ markers = [
     "unit: marks tests as unit tests", 
     "performance: marks tests as performance tests",
     "asyncio: marks tests as async tests",
+    "benchmark: marks tests as benchmark tests",
 ]
 
 # Logging configuration for tests
