--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -65,7 +65,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
 
       - name: Install markdown tools
         run: |
@@ -204,26 +203,35 @@ jobs:
 
       - name: Install documentation tools
         run: |
-          uv tool install pdoc3
-          uv tool install sphinx
-          uv tool install sphinx-rtd-theme
+          uv pip install -r docs/requirements.txt
 
       - name: Generate API documentation
         run: |
           mkdir -p docs/api
           
-          # Generate with pdoc if available
-          if command -v pdoc3 &> /dev/null; then
-            echo "Generating API docs with pdoc3..."
-            uv tool run pdoc3 --html --output-dir docs/api src/ || echo "pdoc3 generation failed"
-          fi
+          # Generate API documentation with sphinx-apidoc
+          echo "Generating API docs with Sphinx..."
+          uv run sphinx-apidoc -o docs/api src --force
           
-          # Create simple API reference
+          # Build Sphinx documentation
+          echo "Building Sphinx HTML documentation..."
+          PYTHONPATH=$(pwd)/src:$(pwd) uv run sphinx-build -b html docs docs/_build/html
+          
+          # Also try pdoc3 as fallback (may fail but that's OK)
+          echo "Attempting pdoc3 generation as fallback..."
+          uv run pdoc --html --output-dir docs/api_pdoc src/ || echo "⚠️ pdoc3 generation failed (expected due to dependency isolation)"
+          
+          # Create API reference index
           echo "# API Reference" > docs/api/README.md
           echo "" >> docs/api/README.md
           echo "This directory contains auto-generated API documentation." >> docs/api/README.md
           echo "" >> docs/api/README.md
-          echo "## Modules" >> docs/api/README.md
+          echo "## Generated Documentation" >> docs/api/README.md
+          echo "" >> docs/api/README.md
+          echo "- **Sphinx HTML**: Available in \`_build/html/\` directory" >> docs/api/README.md
+          echo "- **API Modules**: Auto-generated RST files for all Python modules" >> docs/api/README.md
+          echo "" >> docs/api/README.md
+          echo "## Available Modules" >> docs/api/README.md
           echo "" >> docs/api/README.md
           
           find src -name "*.py" -type f | sort | while read -r file; do
@@ -235,7 +243,10 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: api-documentation
-          path: docs/api/
+          path: |
+            docs/api/
+            docs/_build/html/
+            docs/api_pdoc/
           retention-days: 30
 
   check-doc-coverage:
@@ -263,18 +274,20 @@ jobs:
         run: |
           uv sync --dev --frozen
 
+      - name: Install documentation tools
+        run: |
+          uv pip install -r docs/requirements.txt
+          
       - name: Check docstring coverage
         run: |
-          uv tool install interrogate
-          
           echo "# Documentation Coverage Report" > doc-coverage-report.md
           echo "" >> doc-coverage-report.md
           echo "## Docstring Coverage" >> doc-coverage-report.md
           echo "" >> doc-coverage-report.md
           
           # Run interrogate and capture output
-          uv tool run interrogate -v src/ --fail-under=70 --generate-badge docs/ || true
-          uv tool run interrogate src/ > interrogate-output.txt 2>&1 || true
+          uv run interrogate -v src/ --fail-under=70 --generate-badge docs/ || true
+          uv run interrogate src/ > interrogate-output.txt 2>&1 || true
           
           echo '```' >> doc-coverage-report.md
           cat interrogate-output.txt >> doc-coverage-report.md
@@ -360,49 +373,38 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          node-version: '20'
-          cache: 'npm'
+          python-version: '3.13'
 
-      - name: Create basic documentation site
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
+          enable-cache: true
+
+      - name: Install dependencies
         run: |
-          mkdir -p site
+          uv sync --dev --frozen
+
+      - name: Install documentation tools
+        run: |
+          uv pip install -r docs/requirements.txt
+
+      - name: Build MkDocs documentation site
+        run: |
+          echo "Building documentation with MkDocs..."
+          uv run mkdocs build
           
-          # Create index page
-          cat > site/index.html << 'EOF'
-          <!DOCTYPE html>
-          <html>
-          <head>
-              <title>AI Docs Vector DB Documentation</title>
-              <meta charset="utf-8">
-              <meta name="viewport" content="width=device-width, initial-scale=1">
-              <style>
-                  body { font-family: -apple-system, BlinkMacSystemFont, sans-serif; margin: 40px; }
-                  .container { max-width: 800px; margin: 0 auto; }
-                  h1 { color: #333; }
-                  .nav { margin: 20px 0; }
-                  .nav a { margin-right: 20px; color: #0066cc; text-decoration: none; }
-                  .nav a:hover { text-decoration: underline; }
-              </style>
-          </head>
-          <body>
-              <div class="container">
-                  <h1>AI Docs Vector DB Documentation</h1>
-                  <div class="nav">
-                      <a href="users/">User Guide</a>
-                      <a href="developers/">Developer Guide</a>
-                      <a href="operators/">Operations Guide</a>
-                  </div>
-                  <p>Welcome to the AI Docs Vector DB documentation site.</p>
-              </div>
-          </body>
-          </html>
-          EOF
+          # Also build Sphinx documentation
+          echo "Building Sphinx documentation..."
+          uv run sphinx-apidoc -o docs/api src --force
+          PYTHONPATH=$(pwd)/src:$(pwd) uv run sphinx-build -b html docs docs/_build/html
           
-          # Copy documentation
-          cp -r docs/* site/ 2>/dev/null || echo "No docs directory found"
+          # Copy Sphinx docs to MkDocs site
+          mkdir -p site/sphinx
+          cp -r docs/_build/html/* site/sphinx/ 2>/dev/null || echo "No Sphinx HTML found"
 
       - name: Upload documentation site
         uses: actions/upload-pages-artifact@v3
