refactor: reorganize project directory structure and Docker files
- Delete temporary/outdated documentation files (PR_FINAL_STATUS.md, htmlcov/)
- Move implementation docs to docs/developers/summaries/ and docs/developers/reviews/
- Create docker/ subdirectory and move Dockerfile.worker
- Update docker-compose.yml and docker-compose.personal-use.yml to reference new Docker file location
- Apply linting fixes and formatting improvements
- Follow 2024-2025 best practices for Python project organization

--- a/docker-compose.personal-use.yml
+++ b/docker-compose.personal-use.yml
@@ -93,7 +93,7 @@ services:
   task-worker:
     build:
       context: .
-      dockerfile: Dockerfile.worker
+      dockerfile: docker/Dockerfile.worker
     container_name: task-worker-personal
     restart: unless-stopped
     environment:
