chore: enhance .gitignore and reorganize root directory
- Add comprehensive Python AI/ML .gitignore patterns including:
  * Runtime directories (logs/, cache/, data/, worktrees/)
  * AI/ML specific patterns (models/, checkpoints/, .wandb/, mlruns/)
  * Model file extensions (*.pkl, *.pt, *.h5, *.onnx, etc.)
  * Vector database and Hugging Face cache directories
  * GPU profiling and additional Python tooling patterns

- Reorganize documentation files:
  * Move temporary docs to docs/developers/summaries/
  * Remove redundant Dockerfile.worker.minimal

- Untrack previously committed runtime/generated files:
  * coverage.json (test coverage output)
  * Runtime data directories

Follows 2024-2025 Python project best practices for clean
repository organization and comprehensive ignore patterns.

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,78 @@ claude_task.pid
 CLAUDE.md.bak
 repomix-output.*
 .crawl4ai_state.json
+
+# Runtime directories and files
+logs/
+cache/
+data/
+worktrees/
+coverage.json
+
+# AI/ML specific
+models/
+checkpoints/
+experiments/
+artifacts/
+wandb/
+.wandb/
+mlruns/
+.mlflow/
+runs/
+tensorboard/
+.tensorboard/
+
+# Model files
+*.pkl
+*.pickle
+*.h5
+*.hdf5
+*.pt
+*.pth
+*.safetensors
+*.onnx
+*.pb
+*.tflite
+*.joblib
+
+# Vector database data
+qdrant_storage/
+vector_data/
+embeddings_cache/
+index_data/
+
+# Hugging Face cache
+.cache/huggingface/
+.cache/torch/
+transformers_cache/
+
+# GPU profiling
+*.nvprof
+*.nsys-rep
+*.qdrep
+*.sqlite
+
+# Additional Python patterns
+.pdm.toml
+.pdm-python
+.pdm-build/
+__pypackages__/
+.pypirc
+.ruff_cache/
+.cursorignore
+.cursorindexingignore
+
+# Backup files
+*.bak
+*.backup
+*.orig
+*.tmp
+
+# System files
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+desktop.ini
